workflow to publish package

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/amitak/hello-world/issues"
   },
-  "homepage": "https://github.com/amitak/hello-world#readme"
+  "homepage": "https://github.com/amitak/hello-world#readme",
+  "publishConfig": {
+   "@amitak:registry": "https://npm.pkg.github.com"
+ }
 }
